[project]
name = "bucklers-sf6-scraper"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "asynciolimiter>=1.2.0",
    "ipython>=9.4.0",
    "python-dotenv>=1.2.2",
    "rnet>=2.3.9",
    "selectolax>=0.3.31",
]
